# 1pm-we-connect

./: .gitignore  README.html  README.md  config.py  conftest.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scripts.sh  wsgi.py
docs/: DEPLOY.md  DESIGN.md  MANUAL.md
frontend/: .prettierignore  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  theme.js
frontend/src/api-requests/: index.js
frontend/src/pages/: About.js  CreatePost.js  Help.js  Home.js  OurTeam.js
sprint01/: lab01.md  lec03.md  lec04.md
src/: __init__.py  app.py  asset-manifest.json  database.db  index.html  models.py  routes.py
src/static/css/: main.55c3d60c.chunk.css  main.55c3d60c.chunk.css.map
src/templates/: index.html
src/tests/: __init__.py  model_test.py  project_test.py  schema.sql  tags_test.py  test-database.db
team/: AGREEMENTS.md  Alon.md  Kenneth.md  Kevin.md  LEADERSHIP.md  LEARNING.md  MVP_DEMO.md  NORMS.md  Surendra.md  Thanawat.md  problem_scenario.md  user_journey.md
team/contributions/: contrib_Alon  contrib_kenneth.md  contrib_kevin.md  contrib_surendra.md  contrib_thanawat.md
team/retrospectives/: RETRO_01.md  RETRO_02.md  RETRO_03.md
team/sprint01/: 04-13-2pm.md  lec05.md
team/sprint02/: 4-17-2021-backend-meeting.md  4-18-2021-frontend-meeting.md  lab02.md  lab03.md  lab05.md  lec05.md  lec06.md  lect07.md  lect08.md  lect09.md  lect11.md  sprint-planning.md
team/sprint03/: lab06p1.md  lab07.md  lec12.md  lec13.md  lect14.md  lect15.md  lect16.md  lect17.md  lect18.md  lect19.md  sprint-planning.md
(+19 files in other folders)
