[tool.poetry]
name = "we-connect"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.17.0"
SQLAlchemy = "^1.4.11"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
pytest-flask = "^1.2.0"
pytest-flask-sqlalchemy = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
